# Spatial_Inference_Codec

./: .gitignore  CMakeLists.txt  LabChannelVisualizer.py  compare.py
channel_decoder/src/: main.cpp
channel_encoder/src/: main.cpp
decoder/include/: Indexmatrixsubsampling_dec.hpp  sif_decoder.hpp
decoder/src/: main_decoder.cpp
decoder_mod/include/: Indexmatrixsubsampling_dec_mod.hpp  sif_decoder_mod.hpp
decoder_mod/src/: main_decoder_mod.cpp
encoder/: CMakeLists.txt
encoder/include/: Cluster.hpp  FileHandler.hpp  GradientEncoder.hpp  ImageConverter.hpp  ResidualEncoder.hpp  VoxelGrid.hpp
encoder/src/: FileHandler.cpp  ImageConverter.cpp  main.cpp
encoder_mod/include/: Cluster_mod.hpp  FileHandler_mod.hpp  GradientEncoder_mod.hpp  GradientReconstruction_mod.hpp  ImageConverter_mod.hpp  Indexmatrixsubsampling_mod.hpp  VoxelGrid_mod.hpp
encoder_mod/src/: FileHandler_mod.cpp  ImageConverter_mod.cpp  main.cpp
new_encoder/src/: main.cpp
util/: Compression.hpp  GradientTypes.hpp  ImageConverter_mod.hpp  PaletteEntry.hpp
